fixed alignment bug

--- a/src/css/penyuluhan.css
+++ b/src/css/penyuluhan.css
@@ -3,6 +3,4 @@
 }
 .penyuluhan-detail {
     font-size: 1.5rem;
-    padding-top: 15px;
-    height: 100%;
 }
